small changes done

--- a/setting.html
+++ b/setting.html
@@ -33,7 +33,7 @@
            <img src="img/notification.png" class="menu-icons"/>
            <span class="menu-text">Notifications</span>
        </a>
-       <a class="menu-items" href="./s.html">
+       <a class="menu-items" href="./search.html">
            <img src="img/search.png" class="menu-icons"/>
            <span class="menu-text">Search</span>
        </a>
