--- a/profile.html
+++ b/profile.html
@@ -46,26 +46,26 @@
         </div>
         </div>
         <div class="bottom-navigation-bar">
-            <a class="bottom-menu-items" href="./../sidebar.html">
-                <img src="./../img/home.png" class="bottom-menu-icons">
+            <a class="bottom-menu-items" href="index.html">
+                <img src="img/home.png" class="bottom-menu-icons">
             </a>
-           <a class="bottom-menu-items" href="./coueses.html">
-             <img src="./../img/books.png" class="bottom-menu-icons" height="100px">
+           <a class="bottom-menu-items" href="course.html">
+             <img src="img/courses.png" class="bottom-menu-icons" height="100px">
           </a>
-           <a class="bottom-menu-items" href="./profile.html">
-            <img src="./../img/profile.png" class="bottom-menu-icons  bottom-menu-icons-active" height="100px">
+           <a class="bottom-menu-items" href="profile.html">
+            <img src="img/profile.jpg" class="bottom-menu-icons  bottom-menu-icons-active" height="100px">
            </a>
-           <a class="bottom-menu-items" href="./setting.html">
-                <img src="./../img/setting.png" class="bottom-menu-icons">
+           <a class="bottom-menu-items" href="setting.html">
+                <img src="img/setting.png" class="bottom-menu-icons">
             </a>
-            <a class="bottom-menu-items" href="./notification.html">
-                <img src="./../img/notification.png" class="bottom-menu-icons">
+            <a class="bottom-menu-items" href="notification.html">
+                <img src="img/notification.png" class="bottom-menu-icons">
             </a>
-            <a class="bottom-menu-items" href="./search.html">
-                <img src="./../img/search.png" class="bottom-menu-icons">
+            <a class="bottom-menu-items" href="search.html">
+                <img src="img/search.png" class="bottom-menu-icons">
             </a>
-            <a class="bottom-menu-items" href="./logout.html">
-                <img src="./../img/logout.png" class="bottom-menu-icons">
+            <a class="bottom-menu-items" href="logout.html">
+                <img src="img/logout.jpg" class="bottom-menu-icons">
             </a>
            </div>
 
