--- a/setting.html
+++ b/setting.html
@@ -47,19 +47,19 @@
         </div>
         </div>
         <div class="bottom-navigation-bar">
-            <a class="bottom-menu-items" href="./../sidebar.html">
-                <img src="./../img/home.png" class="bottom-menu-icons">
+            <a class="bottom-menu-items" href="index.html">
+                <img src="img/home.png" class="bottom-menu-icons">
             </a>
-           <a class="bottom-menu-items" href="./coueses.html">
-             <img src="./../img/books.png" class="bottom-menu-icons" height="100px">
+           <a class="bottom-menu-items" href="coueses.html">
+             <img src="img/courses.png" class="bottom-menu-icons" height="100px">
           </a>
-           <a class="bottom-menu-items" href="./profile.html">
-            <img src="./../img/profile.png" class="bottom-menu-icons" height="100px">
+           <a class="bottom-menu-items" href="profile.html">
+            <img src="img/profile.jpg" class="bottom-menu-icons" height="100px">
            </a>
-           <a class="bottom-menu-items" href="./setting.html">
-                <img src="./../img/setting.png" class="bottom-menu-icons bottom-menu-icons-active">
+           <a class="bottom-menu-items" href="setting.html">
+                <img src="img/setting.png" class="bottom-menu-icons bottom-menu-icons-active">
             </a>
-            <a class="bottom-menu-items" href="/notification.html">
+            <a class="bottom-menu-items" href="notification.html">
                 <img src="C:\Users\Omkar Borude\OneDrive\Desktop\New folder\img\notification.png" class="bottom-menu-icons">
             </a>
             <a class="bottom-menu-items" href="search.html">
